2022-02-17 Franz Holzinger  <franz@ttproducts.de>
    Deprecation: #81852 - Deprecate usage of rsaauth

2021-12-16 Franz Holzinger  <franz@ttproducts.de>
    * support for TYPO3 10.x

2020-11-20 Franz Holzinger  <franz@ttproducts.de>
    * bugfix for TYPO3 9.5: Use the classes \TYPO3\CMS\Core\Crypto\PasswordHashing\SaltedPasswordService instead of \TYPO3\CMS\Saltedpasswords\SaltedPasswordService and  \TYPO3\CMS\Core\Crypto\PasswordHashing\PasswordHashFactor instead of \TYPO3\CMS\Saltedpasswords\Salt\SaltFactory

2020-10-29 Franz Holzinger  <franz@ttproducts.de>
    * workaround for bug in TYPO3 9.5.22: ExtensionManagementUtility::isLoaded for saltedpasswords must not be true.

2020-06-20 Franz Holzinger  <franz@ttproducts.de>
    * new feature: the locallange setup shall be merged to the already present items of the TCA for radio or select. E.g. you can override the gender and the status by a locallang setup. You the constants mergeLabels to activate this feature.
    * bugfix: add missing button to enter in the login box after the click on the registration confirmation link.
    * bugfix: missing agency setup. The method addStaticFile must be called also for the frontend.

2020-05-30 Franz Holzinger  <franz@ttproducts.de>
    * replace the documentation in the outdated sxw format manual.sxw by the manual.odt in the Open Document Format.
    * bugfix: the template must use field specific label classes and not labelStatus outside of the status field

2020-05-09 Franz Holzinger  <franz@ttproducts.de>
    * support for TYPO3 9.x
    * several PHP bug fixes

2020-02-18 Franz Holzinger  <franz@ttproducts.de>
    * bugfix: Error in the check if a field has already been added to the $TCA by another extension

2019-07-27 Franz Holzinger  <franz@ttproducts.de>
    * bugfix: Non-static method JambageCom\Agency\Api\System::login

2019-04-12 Franz Holzinger  <franz@ttproducts.de>