@@ -10,11 +10,11 @@ $EM_CONF[$_EXTKEY] = [
     'author' => 'Franz Holzinger',
     'author_email' => 'franz@ttproducts.de',
     'author_company' => 'jambage.com',
-    'version' => '0.10.0',
+    'version' => '0.11.0',
     'constraints' => [
         'depends' => [
             'php' => '7.4.0-7.99.99',
-            'typo3' => '10.4.0-10.4.99',
+            'typo3' => '10.4.0-11.5.99',
             'div2007' => '1.14.2-0.0.0',
             'rdct' => '2.0.0-0.0.0',
             'typo3db_legacy' => '1.0.0-1.1.99',
